--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Prerequisites
 *.d
-
 # Object files
 *.o
 *.ko
@@ -50,3 +49,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Other
+*.vscode
